Revision history for Test-BrewBuild

2.06    xxx
        - BBDEV_TESTING tests now require a version (eg: 5.24.0) set in
          $ENV{PERLVER}, instead of having 5.22.1 hardcoded (closes #132)


2.05    2016-05-06
        - added [brewbuild] section to config file (closes #128)
        - cleaned up test logic due to failing MSWin tests
        - switched from CPAN::ReverseDependencies to MetaCPAN::Client, as the
          former was using MetaCPAN::API which is depricated, and failing to
          install on MSWin systems. (I sent a PR to the dist which fixes it). We
          now have our own revdep discovery process
        - fixed logic issue where -1 wasn't being used in instance_install(),
          breaking the ability to install all perl instances (fixes #130)

2.04    2016-04-27
        - Results from MSWin now properly show the _bit suffix for the perl used
          in test results (closes #124)
        - instance_install() when installing randomly doesn't attempt duplicate
          versions any longer (fixes #123)
        - cleaned up formatting of revdep returned output (closes #126)
        - on Unix, we now include Release Candidate perl instances when using
          random install, eg perl-5.24.0-RC3 (closes #127)
        - various log entry cleanup (closes #112)

2.03    2016-04-26
        - brewbuild can now dispatch the most basic of testing to remotes via
          the -D and -t flags. For more advanced remote testing, use bbdispatch
          (closes #122)
        - changed to searching %PATH% for binaries as opposed to using 'where'
          on MSWin, as on pre 2k3, 'where' didn't exist (closes #117)
        - moved setting the brewbuild command default from bbdispatch to
          Dispatch (closes #118)
        - On MSWin, we now accept the _32/_64 suffixes in --install, otherwise
          we'll default to 64-bit. This suffix will be stripped on Unix systems
          if dispatching to both Unix and Windows testers (closes #114)