@@ -12,8 +12,6 @@ if (! $ENV{BBDEV_TESTING}){
     exit;
 }
 
-my $perlver = $ENV{PERLVER};
-
 { # PASS
 
     my $ae = Archive::Extract->new(archive => 't/modules/bb-pass.zip');
@@ -29,7 +27,7 @@ my $perlver = $ENV{PERLVER};
     print "*$_*\n" for @res;
     is (@res, 2, "proper result count");
 
-    like ( $res[1], qr/$perlver.*? :: PASS/, "PASS ok" );
+    like ( $res[1], qr/:: PASS/, "PASS ok" );
 
     remove_tree('BB-Pass');
     is (-d 'BB-Pass', undef, "pass dir removed ok");
