@@ -13,8 +13,6 @@ if (! $ENV{BBDEV_TESTING}){
     exit;
 }
 
-my $perlver = $ENV{PERLVER};
-
 { # --remove
 
     my $ae = Archive::Extract->new(archive => 't/modules/bb-pass.zip');
@@ -37,7 +35,7 @@ my $perlver = $ENV{PERLVER};
         "$res[0] ok with --remove",
     );
 
-    like ( $res[1], qr/$perlver.*? :: PASS/, "$res[1] ok" );
+    like ( $res[1], qr/:: PASS/, "$res[1] ok" );
 
     remove_tree('BB-Pass');
     is (-d 'BB-Pass', undef, "pass dir removed ok");
