@@ -12,8 +12,6 @@ if (! $ENV{BBDEV_TESTING}){
     exit;
 }
 
-my $perlver = $ENV{PERLVER};
-
 { #
 
     my $ae = Archive::Extract->new(archive => 't/modules/bb-522.zip');
@@ -34,13 +32,13 @@ my $perlver = $ENV{PERLVER};
 
     if ($^O =~ /MSWin/){
         is (@res, 3, "pass and fail simultaneously has proper count");
-        is ($res[1], '5.10.1_32 :: PASS', "PASS ok");
-        is ($res[2], "$perlver_64 :: FAIL", "FAIL ok");
+        is ($res[1], qr/:: PASS/, "PASS ok");
+        is ($res[2], qr/:: FAIL/, "FAIL ok");
     }
     else {
         is (@res, 3, "pass and fail simultaneously has proper count");
-        is ($res[1], '5.10.1 :: PASS', "PASS ok");
-        is ($res[2], "$perlver :: FAIL", "FAIL ok");
+        is ($res[1], qr/:: PASS/, "PASS ok");
+        is ($res[2], qr/:: FAIL/, "FAIL ok");
     }
 
     remove_tree('BB-522');
