@@ -18,8 +18,6 @@ if (! grep {-x "$_/dzil"} split /$path_sep/, $ENV{PATH} ){
     plan skip_all => "dzil not found for Dist::Zilla tests";
 }
 
-my $perlver = $ENV{PERLVER};
-
 { # PASS
 
     my $ae = Archive::Extract->new(archive => 't/modules/dzil-test.zip');
@@ -35,7 +33,7 @@ my $perlver = $ENV{PERLVER};
     print "*$_*\n" for @res;
     is (@res, 2, "dzil proper result count");
 
-    is ( $res[1], "$perlver :: PASS", "dzil PASS ok" );
+    like ( $res[1], qr/:: PASS/, "dzil PASS ok" );
 
     remove_tree('Dzil-Test');
     is (-d 'Dzil-Test', undef, "dzil dir removed ok");
